added general style configurations

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #180A44;
+}
+
+* {
+  color: #FFFFFF;
+}
+
+h1 {
+  font-family: 'Roboto Serif', serif;
+  font-weight: 700;
+  font-size: 45px;
+}
+
+h2,
+h4,
+p {
+  font-family: 'Roboto', sans-serif;
+}
