--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,3 +1,6 @@
+@import "fonts/roboto-v30-latin/font-face.css";
+@import "fonts/roboto-serif-v8-latin/font-face.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
